fixing nav collapse

--- a/css/style.css
+++ b/css/style.css
@@ -301,10 +301,12 @@ ul.social-buttons {
 
 @media (max-width: 480px) {
   .navbar .nav > li {
-    padding: 5px 2px;
+    padding: 2px 0px;
+    width: 100%;
+    text-align: center;
   }
 
   .nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
-    padding: 10px 10px;
+    padding: 10px 15px;
   }
 }
